# Bandcamp-Fetcher

./: Cargo.toml  README.md  scraping.md
src/: main.rs
src/api/: bandcamp_api.rs  mod.rs
src/models/: bandcamp_format.rs  bandcamp_sale.rs  collection_item.rs  mod.rs
src/models/api/: bandcamp_item.rs  collection_data.rs  collection_items.rs  fan.rs  mod.rs  url_hints.rs
src/services/: collection_page_scraper.rs  download_page_scraper.rs  files.rs  mod.rs  page_data_extractor.rs  sanitizer.rs
