[package]
name = "bandcamp_fetcher"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.25"
reqwest = { version = "0.12.12", features = ["cookies", "json"] }
scraper = "0.22.0"
serde = { version = "1.0.217", features = ["serde_derive", "derive"] }
serde_json = "1.0.138"
simplelog = "0.12.2"
tokio = { version = "1.43.0", features = ["full"] }
