[package]
name = "bandcamp_fetcher"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.29"
reqwest = { version = "0.13.1", features = ["blocking", "cookies", "json"] }
scraper = "0.25.0"
serde = { version = "1.0.228", features = ["serde_derive", "derive"] }
serde_json = "1.0.149"
serde_path_to_error = "0.1.20"
simplelog = "0.12.2"
zip = "2.2.2"
